--- a/genitourinary.html
+++ b/genitourinary.html
@@ -187,6 +187,53 @@ Answer: <p style="color:white"> The Henderson/Hasselbalch equation can be used t
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A person who produces hyperosmotic urine (1000 mOsm/L) will have a negative free-water clearance (-C<sub>H2O</sub>) [C<sub>H2O</sub> = V - C<sub>osm</sub>] All of the others will have a positive C<sub>H2O</sub> because they are producing hyposmotic urine as a result of the suppression of ADH by water drinking, central diabetes insipidus, or nephrogenic diabetes insipidus.</p>
+  At plasma para-aminohippyuric acid (PAH) concentrations below the T<sub>m</sub>, PAH <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. reabsorption is not saturated </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. clearance equals inulin clearance</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. secretion rate equals PAH excretion rate</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. concentration in the renal vein is close to zero</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. concentration in the renal vein equals PAH concentration in the renal artery</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+  Answer: <p style="color:white"> At plasma concentrations that are lower than the T<sub>m</sub> for PAH secretion, PAH concentration in the renal vein is nearly zero because the sum of filtration plus secretion removes virtually all PAH from the renal plasma. Thus the PAH in the renal vein is less than that in the renal artery because most of the PAH entering the kidney is excreted in urine. PAH clearance is greater than inulin clearance because PAH is filtered and secreted; inulin is only filtered. </p>
+Compared with a person who ingests 2L of distilled water, a person with water deprivation will have a <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+    <label for="male"> A. higher C<sub>H2O</sub></label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. lower plasma osmolality</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. lower circulating level of ADH</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. higher tubular fluid/plasma osmolarity in the proximal tubule</label><br> <input type="radio" id="E" name="1" value="E">
+    <label for="other"> E. higher rate of H<sub>2</sub>O reabsorption in the collecting ducts</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> The person with water deprivation will have a higher plasma osmolarity and higher circulating levels of ADH. These effects will increase the rate of H<sub>2</sub>O reabsorption in the collecting ducts and create a -C<sub>H2O</sub>. Tubular fluid/plasma osmolarity in the proximal tubule is not affeted by ADH.</p>
+  Which of the following would cause an increase in both GFR and RPF?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. hyperproteinemia</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. a ureteral stone</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. dilation of the afferent arteriole</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. dilation of the efferent arteriole</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. constriction of the efferent arteriole</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Dilation of the afferent arteriole will increase both RPF because renal vascular resistance is decreased, and GFR because glomerular capillary hydrostatic pressure is increased. Dilation of the efferent arteriole will increase RPF but decrease GFR. Constriction of the efferent arteriole will decrease RPF due to increased renal vascular resistance and increase GFR. Both hyperproteinemia (increased &pi; in the glomerular capillaries) and a ureteral stone (hydrostatic pressure in Bowman space) will oppose filtration and decrease GFR.</p>
+
+Answer: <p style="color:white"> <table style="color:white">
+
+Answer: <p style="color:white"> <table style="color:white">
+Answer: <p style="color:white"> <table style="color:white">
   <b>micturition</b><br>
   <b>Cell/tissue structure and function</b><br>
   <i>renal metabolism and oxygen consumption</i><br>
@@ -221,6 +268,7 @@ Answer: <p style="color:white"> A person who produces hyperosmotic urine (1000 m
 Answer: <p style="color:white"> Mannitol is a marker substance for the ECF volume. ECF volume = amount of mannitol/concentration of manitol = (1g - 0.2g)/0.08g/L = 10L </p>
 <i>hormones produced by or acting on the kidney (eg, renin, aldosterone, angiotensin II,
   vasopressin)</i><br>
+  
   <b>Repair, regeneration, and changes associated with stage of life</b><br>
 <h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
   <h3>Infectious, immunologic, and inflammatory disorders</h3><br>
