--- a/anatomy.html
+++ b/anatomy.html
@@ -4,5 +4,74 @@
 </head>
 <body>
 <h1><center>Anatomy</center></h1>
+  <h2> Head </h2>
+  A 35 yo M is admitted to ED after a car crash. After examining the patient, the physician concludes that the serratus anterior muscle is damaged. Which of the following nerves innervates the serratus anterior muscle?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. long thoracic </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. axillary</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. spinal accessory</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. dorsal scapular</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. thoracodorsal</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The long thoracic innervates the serratus anterior. The axillary nerve innervates the deltoid, the spinal accessory nerve innervates the SCM and trapezius, the dorsal scapular nerve supplies the rhomboids and levator scapulae, and the latissimus dorsi is the muscle supplied by the thoracodorsal nerve.</p>
+  What function does the serratus anterior muscle serve?
+ <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. adducts scapula</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. depresses ribs</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. protracts and rotates scapula</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. elevates scapula</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. adducts, extends, medially rotates arm</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The functions of the serratus anterior are protraction and rotation of the scapula. The rhomboid major and minor adduct the scapula, the serratus posterior inferior depresses the lower ribs, the levator scapulae elevates the scapula, and the latissimus dorsi adducts, extends, and medially rotates the arm.</p>
+  Which functions will a patient with a damaged serratus anterior muscle be unable to perform?
+ <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. retraction of the scapula</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. elevation of the scapula </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. depression of the scapula</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. protraction of the scapula</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. medial rotation of the scapula</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white">  The serratus anterior muscle protracts the scapula over the thoracic wall. Elevation of the scapula is carried out mainly by the trapezius and levator scapulae while depression is performed primarily by the lower fibers of the trapezius. Different muscles contribute to the movement of the scapula such as the serratus anterior, trapezius, levator scapulae, rhomboids, and pectoralis minor.</p>
+  Which of the following muscles is most likely injured if a winged scapula is observed?
+ <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. levator scapulae</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. serratus anterior</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. trapezes</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. rhomboids major and minor</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. serratus posterior superior</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The serratus anterior prevents winging of the scapula but protraction and keeping the costal surface closely apposed to the thoracic wall. The levator scapulae elevates the scapula. The trapezius muscle elevates the shoulder and rotates the scapula for overhead motions. The rhomboid major and minor elevate and retract the scapula.</p>
+
+Answer: <p style="color:white"> <table style="color:white">
+
+
 </body>
 </html>
