--- a/anatomy.html
+++ b/anatomy.html
@@ -70,8 +70,74 @@ Answer: <p style="color:white">  The serratus anterior muscle protracts the scap
 </form>
 Answer: <p style="color:white"> The serratus anterior prevents winging of the scapula but protraction and keeping the costal surface closely apposed to the thoracic wall. The levator scapulae elevates the scapula. The trapezius muscle elevates the shoulder and rotates the scapula for overhead motions. The rhomboid major and minor elevate and retract the scapula.</p>
 
-Answer: <p style="color:white"> <table style="color:white">
-
-
+  <h2>Back</h2>
+  During an outbreak of meningitis at a local college, a 20yo M presents to an ED complaining of HA, fever, chills, and stiff neck. He is about to get an LP. Where would you normally withdraw CSF?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Epidural space</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Subdural space</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Space between the spinal cord and pia mater </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Subarachnoid space</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Space between the arachnoid and dura maters</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> CSF is found in the subarachnoid space between the arachnoid and pia maters. The epidural space contains the internal vertebral venous plexus and epidural fat. The subdural space between the arachnoid and the dura contains a little fluid to moisten the meningeal surace. The pia mater closely covers the spinal cord and enmeshes blood vessels on the surfaces of the spinal cord, creating a potential space.</p>
+  A 23yo F falls from her horse and complains of HA, backache, and weakness. Radiologic exam would reveal blood in which of the following spaces if the internal vertebral venous plexus was ruptured?
+   <form>
+ 
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Space deep to the pia mater</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Space between the arachnoid and dura maters</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Subdural space</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Epidural space</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Subarachnoid space</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The space between the vertebral canal and the dura mater is the epidural space,which contains the internal vertebral venous plexus. The spinal cord and blood vessels lie deep to the pia mater. The space between the arachnoid and the dura maters is the subdural space, which contain a film of fluid. The subarachnoid space contains CSF. </p>
+  
+  A 42yo F with metastatic breast cancer is known to have tumors in the intervertebral foramina between the fourth and fifth cervical vertebrae and between the fourth and fifth thoracic vertebrae. Which of the following spinal nerves may be damaged?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Fourth cervical and fourth thoracic nerves</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Fifth cervical and fifth thoracic nerves</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Fourth cervical and fifth thoracic nerves</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Fifth cervical and fourth thoracic nerves</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Third cervical and fourth thoracic nerves</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> All cervical spinal nerves exit through the intervertebral foramina above the corresponding vertebrae except the eighth cervical nerves, which run interior to the seventh cervical vertebra. All other spinal nerves exit the intervertebral foramina below the corresponding vertebrae. Therefore, the fifth cervical nerve passes between the fourth and fifth cervical vertebrae, and the fourth thoracic nerve runs between the fourth and fifth thoracic vertebrae.</p>
+  
+  A 39 yo F with headaches presents to her PCP with back pain from a possible herniated disk. Her MRI reveals that the posterolateral protrusion of the intervertebral disk between the L4 and L5 vertebrae would most likely affect nerve roots from which of the following spinal nerves?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Third lumbar nerve</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Fourth lumbar nerve</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Fifth lumbar nerve</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. First sacral nerve</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Second sacral nerve</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> A posterolateral herniation of the intervertebral disk at disk levels L4-L5 affects the fifth lumbar nerve root but rarely affects the fourth lumbar nerve root because of a progressive descending obliquity of the fourth and the fifth lumbar nerve roots. The first seven cervical nerves exit above the corresponding vertebra, and the eighth cervical nerve exits below the seventh cervical vertebra because there are eight cervical nerves but only seven cervical vertebrae.</p>
 </body>
+ 
 </html>
