--- a/anatomy.html
+++ b/anatomy.html
@@ -138,6 +138,57 @@ Answer: <p style="color:white"> All cervical spinal nerves exit through the inte
   <label for="other"> F. </label><br>
 </form>
 Answer: <p style="color:white"> A posterolateral herniation of the intervertebral disk at disk levels L4-L5 affects the fifth lumbar nerve root but rarely affects the fourth lumbar nerve root because of a progressive descending obliquity of the fourth and the fifth lumbar nerve roots. The first seven cervical nerves exit above the corresponding vertebra, and the eighth cervical nerve exits below the seventh cervical vertebra because there are eight cervical nerves but only seven cervical vertebrae.</p>
+  
+  A 57yo F comes into her doctor's office complaining of fever, n/v, worst headache over her life. Tests and PE suggest hydrocephalus resulting from a decrease in the absorption of SF. A decrease of flow in the CSF through which of the following structures would be responsible for these findings?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Choroid plexus</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Vertebral venous plexus</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Arachnoid villi</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Internal jugular vein</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Subarachnoid trabeculae</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> CSF is absorbed into the venous system primarily through the arachnoid villi in the cranial dural venous sinuses, especially the superior sagittal sinus. CSF is produced by the choroid plexuses of the ventricles of the brain and is circulated in the subarachnoid space, in which subarachnoid trabeculae are found. The vertebral venous plexus and internal jugular vein are not involved in the absorption of CSF.</p>
+  
+  A 26yo M presents to ED s/p MVA with multiple fractures of the transverse processes of the cervical and upper thoracic vertebrae. Which of the following muscles might be affected?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Trapezius</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Levator scapulae</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Rhomboid major</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Serratus posterior superior</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Rectus capitis posterior major</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The levator scapulae arise from the transverse processes of the upper cervical vertebrae and insert on the medial border of the scapula. The other muscles are attached to the spinous processes of the vertebrae.</p>
+  
+  A 27yo M falls from a steep rock wall and presents to ED with dislocation fracture of the upper thoracic vertebrae. The fractured body of the T4 vertebra articulates with which of the following parts of the ribs?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. head of the third rib</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. neck of the fourth rib</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. tubercle of the fourth rib</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. head of the fifth rib</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. tubercule of the fifth rib </label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> </p>
 </body>
  
 </html>
