--- a/anatomy.html
+++ b/anatomy.html
@@ -188,7 +188,196 @@ Answer: <p style="color:white"> The levator scapulae arise from the transverse p
  <input type="radio" id="F" name="1" value="F">
   <label for="other"> F. </label><br>
 </form>
-Answer: <p style="color:white"> </p>
+Answer: <p style="color:white"> The body of vertebra T4 articulates with the heads of the fourth and fifth ribs. The body of the T3 vertebra articulates with the head of the third and fourth ribs. The neck of a rib does not articulate with any part of the vertebra. The transverse process of the vertebra articulates with the tubercle of the corresponding rib. Therefore the transverse process of T4 vertebra articulates with the tubercle of the fourth rib.</p>
+  
+  A young toddler presents with new onset of bowel and bladder dysfunction and loss of lower limb function. Her mother had folic acid deficiency during her pregnancy. On exam, the child has protrusion of the spinal cord and meninges and is diagnosed with which of the following conditions?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Spina bifida occulta</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. meningocele</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. meningomyelocele</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. myeloschisis</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. syringomyelocele</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> Meningomyelocele is protrusion of the meninges and spinal cord through the unfused arch of the vertebrae. Folic acid in sufficient amounts during pregnancy is shown to prevent these kinds of neural tube defects. Spina bifida occulta is failure of the vertebral arch to fuse (only bony defect). Meningocele is protrusion of the meninges through the defective vertebral arch. Syringomyelocele is protrusion of the meninges and a pathologic tubular cavity in the spinal cord or brain.</p>
+
+  A 34yo F crashes into a tree during a skiing lesson and is brought to a hospital with multiple injuries that impinge the dorsal primary rami of several spinal nerves. Such lesions could affect which of the following muscles?
+ <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Rhomboid major</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Levator scapulae</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Serratus posterior superior</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Iliocostalis</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Latissimus dorsi</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The dorsal primary rami of the spinal nerves innervate the deep muscles of the back, including the iliocostalis. The other muscles are superficial muscles of the back, innervated by the ventral primary rami of the spinal nerves.</p>
+  
+  A 16yo M suffers a deep stab wound near the superior angle of the scapula near the medial border, which compromises both the dorsal scapular and spinal accessory nerves. Such an injury could result in paralysis or weakness of which of the following muscles?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Trapezius and serratus posterior superior</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Rhomboid major and trapezius</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Rhomboid minor and latissimus dorsi</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Splenius cervicis and sternocleidomastoid</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Levator scapulae and erector spinae</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The dorsal scapular nerve innervates the levator scapulae and rhomboid muscles, whereas the accessory nerve innervates the trapezius and sternocleidomastoid muscles. The serratus posterior superior is innervated by ventral primary rami of the spinal nerves, whereas the splenius cervicis and erector spinae are innervated by dorsal primary rami of the spinal nerves.</p>
+
+  An elderly man at a nursing home is known to have degenerative brain disease. When CSF is withdrawn by LP, which of the following structures is most likely penetrated by the needle?
+  
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Pia mater</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Filum terminale externum</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Posterior longitudinal ligament</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D.Ligamentum flavum </label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Annulus fibrosus</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The CSF is located in the subarachnoid space, between the arachnoid layer and the pia mater. In an LP, the needle penetrates the skin, fascia, ligamentum flavum, epidural space, dura mater, subdural space, and arachnoid mater. The pia mater forms the internal boundary of the subarachnoid space; thus, it cannot be penetrated by the needle. The posterior longitudinal ligament lies anterior to the spinal cord and is thus not penetrated by the needle. The filum terminale externum is the downward prolongation of the spinal dura mater from the second sacral vertebra to the dorsum of the coccyx. The annulus fibrosus consists of concentric layers of fibrous tissue and fibrocartilage surrounding and regaining the nucleus pulposus of the intervertebral disk, which lies anterior to the spinal cord.</p>
+  
+  A 27yo M is thrown out of his vehicle prematurely when the car used for a particular scene speeds out of control. His spinal cord is crushed at the level of the fourth lumbar spinal segment. Which of the following structures would most likely be spared from destruction?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Dorsal horn</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Ventral horn</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Lateral horn</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Gray matter</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Pia mater</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The lateral horns, which contain sympathetic preganglionic neuron cell bodies, are present between the first thoracic and the second lumbar spinal cord levels (T1-L2) The lateral horns of the second, third, and fourth sacral cord levels (S2-S4) contain parasympathetic preganglion neuron cell bodies. The entire spinal cord is surrounded by the pia mater and has the dorsal horn, ventral horn, and gray matter. Note that the fourth lumbar spinal cord level is not the same as the fourth vertebral level. The lateral horn is the least likely to be injured.</p>
+  
+  A 24yo F comes to the hospital to deliver her baby. Her Ob uses a caudal anesthesia during labor and childbirth to block the spinal nerves in the epidural space. Local anesthesic agents are most likely injected via which of the following openings?
+     <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Intervertebral foramen</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Sacral hiatus</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Vertebral canal</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Dorsal sacral foramina</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Ventral sacral foramen</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> Caudal (epidural) anesthesia is used to block the spinal nerves in the epidural space by injecting local anesthesia agents via the sacral hiatus located between the sacral cornua. An intervertebral foramen transmits the dorsal and ventral primary rami of the spinal nerves. The vertebral canal accommodates the spinal cord. Dorsal and ventral sacral foramina transmit the dorsal and ventral primary rami of the sacral nerves.</p>
+  
+In a freak hunting accident, a 17yo M was shot with an arrow which penetrated the suboccipital triangle, severing the suboccipital nerve between the vertebral artery and the posterior arch of the atlas. Which of the following muscles would be unaffected by such a lesion?
+     <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Rectus capitis posterior major</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Semispinalis capitis</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Splenius capitis</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Obliquus capitis superior</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Obliquus capitis inferior</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The splenius capitis is innervated by dorsal primary rami of the middle and lower cervical nerves. The suboccipital nerve (dorsal primary ramus of C1) supplies the muscles of the suboccipital area, including the rectus capitis posterior major, obliquus capitis superior and inferior, and the semispinalis capitis.</p>
+  
+  A 26 yo M suffered a punch to his mandible, resulting in a slight subluxation (dislocation) of the atlantoaxial joint. The consequence of the injury was decreased range of motion at that joint. What movement would be most affected?
+
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Extension</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Flexion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Abduction</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Adduction</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Rotation</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The atlantoaxial joints are synovial joints that consist of two plane joints and one pivot joint and are involved primarily in rotation of the head. Other movements do not ocur at this joint.</p>
+  
+  A crush injury of the vertebral column can cause the spinal cord to swell. Which structure would be trapped between the dura and the vertebral body by a swelling spinal cord?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Anterior longitudinal ligament</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Alar ligament</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Posterior longitudinal ligament</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Cruciform ligament</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Ligamentum nuchae</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The posterior longitudinal ligament interconnects the vertebral bodies and intervertebral disks posteriorly and runs anterior to the spinal cord within the vertebral canal. The ligamentum nuchae is formed by supraspinous ligaments that extend from C7 to the external occipital protuberance and crest. The anterior longitudinal ligament runs anterior to the vertebral bodies. The alar and cruciform ligaments also lie anterior to the spinal cord.</p>
+  
+  A 44yo F comes to her physician and complains of headache and backache. On exam, she is found to have fluid accumulation in the spinal epidural space because of damage to blood vessels or meninges. Which of the following structures has likely ruptured?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Vertebral artery</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Vertebral vein</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. External vertebral venous plexus</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Internal vertebral venous plexus</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Lumbar cistern</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> The internal vertebral venous plexus is located in the spinal epidural space and would be most likely to accumulate fluid in this region if ruptured. The vertebral artery and vein occupy the transverse foramina of the upper six cervical vertebrae. The external venous plexus consists of the anterior part, which lies in front of the vertebral column, and the posterior part, which lies on the vertebral arch. The lumbar cistern is the enlargement of the subarachnoid space between the inferior end of the spinal cord and the inferior end of the subarachnoid space.</p>
+  
+  A 69yo M has an abnormally increased curvature of the thoracic vertebral column. Which is the most likely diagnosis?
+   <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Lordosis</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Spina bifida occulta</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Meningocele</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Meningomyelocele</label><br>
+ <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Kyphosis</label><br>
+ <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form>
+Answer: <p style="color:white"> Kyphosis is an abnormally increased thoracic curvature, usually resulting from osteoporosis. Lordosis is an abnormal accentuation of the lumbar curvature. Spina bifida occulta is failure of the vertebral arch to fuse (only bony defect). Meningocele is a protrusion of the meninges through the unfused arch of the vertebra, whereas meningomyelocele is protrusion of the spinal cord and the meninges.</p>
 </body>
  
 </html>
